trying to fix scrolling on ios

--- a/apt2.css
+++ b/apt2.css
@@ -10,6 +10,7 @@ body {
 .pure-container {
   position: relative;
   height: 100%;
+  overflow-y: scroll;
   -webkit-overflow-scrolling: touch; }
 
 /************
